2003-07-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/client.py: Added a `timeout' keyword argument to
	getPage; If the web page takes longer than `timeout' to fetch,
	defer.TimeoutError is errbacked.

	* twisted/web/server.py, twisted/protocols/http.py: add `timeout'
	argument to HTTPFactory and Site to specify how long to allow
	connections to sit without communication before disconnecting
	them.

2003-07-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha1.

2003-07-17  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/smtp.py: Address class changed to provide a
	default domain for addresses missing a domain part.

2003-07-16  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/protocols/sux.py: In beExtremelyLenient mode, all data
	in script elements is considered plain text and will not be parsed
	for tags or entity references.

2003-07-15  Dave Peticolas  <dave@krondo.com>

	* twisted/persisted/styles.py: better debugging output
	for Ephemeral

2003-07-14  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/cred/checkers.py, twisted/cred/credentials.py:
	CramMD5Credentials and OnDiskUsernamePasswordDatabase added;
	IUsernameHashedPassword also created for use by protocols that
	do not receive plaintext passwords over the network.

	* twisted/mail/, twisted/protocols/smtp.py: Addition of alias
	support and authenticated ESMTP connections.  Several interfaces
	changed, but deprecation warnings and backwards compatibility code
	has been put in place to ease the change.

2003-07-12  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/util.py: Add a new ChildRedirector that, when placed
	at /foo to redirect to /bar, will also redirect /foo/abc to
	/bar/abc.

	* twisted/web/scripts.py: Fixed ResourceScriptWrapper so that you
	can now .putChild on the resource you create in an .rpy file that
	is wrapped with this class.

2003-07-06  Paul Swartz  <z3p@twistedmatrix.com>