@@ -210,10 +210,10 @@ class IAmericanSocket(components.Interface):
 <p>Notice how it looks just like a regular class definition, other than
 inheriting from <code class="API"
 base="twisted.python">components.Interface</code>. However, the method
-definitions inside the class block do not have any self parameters, and also do
-not have any method body! Since Python does not have any native language-level
-support for Interfaces like Java does, this is what distinguishes an Interface
-definition from a Class.</p>
+definitions inside the class block do not have any method body! Since
+Python does not have any native language-level support for Interfaces
+like Java does, this is what distinguishes an Interface definition
+from a Class.</p>
 
 <p>Now that we have a defined Interface, we can talk about objects using terms
 like this: <q>The <code>AmericanSocket</code> class implements the
